--- a/style.css
+++ b/style.css
@@ -638,7 +638,6 @@ h1 {
     justify-content: space-between;
 }
 
-
 #fright {
     display: flex;
     align-items: center;
@@ -651,6 +650,7 @@ h1 {
     font-size: 10px;
     font-weight: 200;
 }
+
 
 @media (max-width:600px) {
 
@@ -689,6 +689,10 @@ h1 {
     #page2left {
         margin-top: 5vw;
         width: 100%;
+    }
+    
+    #page2left h2{
+        margin-top: 2vw;
     }
 
     #page2left h4 {
@@ -821,7 +825,6 @@ h1 {
         padding-top: 0;
     }
 
-
     #pright .p {
         height: 300px;
         margin-bottom: 5vw;
@@ -887,6 +890,23 @@ h1 {
         display: none;
     }
 
+    #page4{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-around;
+        /* min-height: 80vh; */
+    }
+
+    #page4 .msn{
+        margin-bottom: 7vw;
+    }
+
+    #page4 .ms3{
+        margin-bottom: 2vw;
+        height: 250px;
+    }
+
     #page4 .ms2,
     .ms3 {
         margin-top: 0vw;
@@ -900,7 +920,6 @@ h1 {
         justify-content: space-between;
         flex-direction: column;
     }
-
 
     #fleft {
         display: flex;
@@ -940,4 +959,11 @@ h1 {
         align-items: flex-end;
         height: 100px;
     }
+}
+
+
+@media (max-width:600px) {
+
+
+    
 }
